[gd_scene load_steps=25 format=2]

[ext_resource path="res://img/Интерфейс/kniga/Глоссарий_открытая рана.png" type="Texture" id=1]
[ext_resource path="res://img/Интерфейс/kniga/закладка1_выйти.png" type="Texture" id=2]
[ext_resource path="res://img/Интерфейс/kniga/закладка4_меню.png" type="Texture" id=3]
[ext_resource path="res://img/Интерфейс/kniga/закладка1_выйти_пс.png" type="Texture" id=4]
[ext_resource path="res://Glossary.gd" type="Script" id=5]
[ext_resource path="res://sound/Собрать и выкинуть предмет1.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/Клик в меню.wav" type="AudioStream" id=7]
[ext_resource path="res://img/Интерфейс/kniga/закладка4_меню_пс.png" type="Texture" id=8]
[ext_resource path="res://img/Интерфейс/kniga/закладка2_ботл.png" type="Texture" id=9]
[ext_resource path="res://img/Интерфейс/kniga/закладка2_ботл_пс.png" type="Texture" id=10]
[ext_resource path="res://img/Интерфейс/kniga/Глоссарий_подагра.png" type="Texture" id=11]
[ext_resource path="res://img/Интерфейс/kniga/уголок_кнопка1.png" type="Texture" id=12]
[ext_resource path="res://img/Интерфейс/kniga/уголок_кнопка2.png" type="Texture" id=13]
[ext_resource path="res://img/Интерфейс/kniga/Глоссарий_ожоги.png" type="Texture" id=14]
[ext_resource path="res://img/Интерфейс/kniga/Глоссарий_гангрена.png" type="Texture" id=15]
[ext_resource path="res://sound/Перевернуть страницу глоссария1.wav" type="AudioStream" id=16]
[ext_resource path="res://sound/Перевернуть страницу глоссария2.wav" type="AudioStream" id=17]
[ext_resource path="res://sound/Перевернуть страницу глоссария3.wav" type="AudioStream" id=18]
[ext_resource path="res://img/Интерфейс/да.png" type="Texture" id=19]
[ext_resource path="res://img/Интерфейс/да_пс.png" type="Texture" id=20]
[ext_resource path="res://img/Интерфейс/выйти в меню.png" type="Texture" id=21]
[ext_resource path="res://img/Интерфейс/нет.png" type="Texture" id=22]
[ext_resource path="res://img/Интерфейс/нет_пс.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 1 ), ExtResource( 11 ) ],
"loop": true,
"name": "pages ",
"speed": 5.0
} ]

[node name="Glossary" type="Node2D"]
script = ExtResource( 5 )

[node name="BookPages" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "pages "
centered = false

[node name="ButtonRecipes" type="TextureButton" parent="."]
margin_left = 2151.9
margin_top = 266.873
margin_right = 2439.9
margin_bottom = 510.874
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMenu" type="TextureButton" parent="."]
margin_left = 2196.41
margin_top = 1128.76
margin_right = 2564.41
margin_bottom = 1412.76
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="TextureButton" parent="."]
margin_left = 1636.83
margin_top = 1510.59
margin_right = 1876.83
margin_bottom = 1794.59
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHovered" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ButtonFlipPageRight" type="TextureButton" parent="."]
margin_left = 2072.12
margin_top = 38.5749
margin_right = 2322.12
margin_bottom = 288.574
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButoonFlipPageLeft" type="TextureButton" parent="."]
margin_left = 182.818
margin_top = 44.1557
margin_right = 432.816
margin_bottom = 294.156
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flipPage1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="flipPage2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="flipPage3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 87.1617
margin_top = 207.241
margin_right = 1329.16
margin_bottom = 661.241
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Popup"]
position = Vector2( 609.113, 308.293 )
scale = Vector2( 1.05197, 1 )
texture = ExtResource( 21 )

[node name="yes" type="TextureButton" parent="Popup/Sprite"]
margin_left = -227.405
margin_top = -35.975
margin_right = -58.4051
margin_bottom = 60.025
texture_normal = ExtResource( 19 )
texture_hover = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no" type="TextureButton" parent="Popup/Sprite"]
margin_left = -16.6781
margin_top = -35.975
margin_right = 152.322
margin_bottom = 60.025
texture_normal = ExtResource( 22 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="ButtonRecipes" to="." method="_on_ButtonRecipes_mouse_entered"]
[connection signal="pressed" from="ButtonRecipes" to="." method="_on_ButtonRecipes_pressed"]
[connection signal="mouse_entered" from="ButtonMenu" to="." method="_on_ButtonMenu_mouse_entered"]
[connection signal="pressed" from="ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
[connection signal="mouse_entered" from="ButtonBack" to="." method="_on_ButtonBack_mouse_entered"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="ButtonFlipPageRight" to="BookPages" method="_on_ButtonFlipPageRight_pressed"]
[connection signal="pressed" from="ButtonFlipPageRight" to="." method="_on_ButtonFlipPageRight_pressed"]
[connection signal="pressed" from="ButoonFlipPageLeft" to="BookPages" method="_on_ButoonFlipPageLeft_pressed"]
[connection signal="pressed" from="ButoonFlipPageLeft" to="." method="_on_ButoonFlipPageLeft_pressed"]
